fix: card wrapping

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,13 +3,14 @@
 }
 .all-books{
   display: flex;
+  flex-wrap: wrap;
 }
 .book-card{
-  width: 200px;
+  width: 180px;
   padding: 10px;
-  margin: 0 8px;
+  margin: 8px 8px;
   border: 1px solid;
 }
 .book-card img{
-  width: 200px;
+  width: 180px;
 }
